# axi-game-engine

./: CLAUDE.md  DESIGN.md  DEV.md  DOC.md  PSEUDOCODE.md  README.md  TUTORIAL_DISCORD_TESTING.md  commands.txt  example_main.py  pyproject.toml
.github/: CODEOWNERS
axi/: __init__.py  abstract_cpu.py  abstract_dm_game.py  abstract_game.py  abstract_mode_selector.py  axi.py  axi_user.py  claude_cpu.py  double_blind.py  effects.py  ladder.py  match_graph.py  match_node.py  pxl_config.py  random_cpu.py  registry.py  series.py  simple_cpu.py  thread_game.py  tournament.py  tournament_presets.py  tournament_state.py  util.py
docs/: axi-user-decoupling-plan.md  effects-plan.md  ladder-handler-extraction-plan.md  match-handler-extraction-plan.md  phase-10-checkpointing_undo-plan.md  phase-11-db_scheduler-plan.md  phase-12-scope_system-plan.md  phase-13-pxl_config-plan.md  phase-14-tournament_commands-plan.md  phase-15-bracket_viz-plan.md  phase-16-wand_persistence_cpu-plan.md  phase-2-single_elimination-plan.md  phase-3-double_elimination-plan.md  phase-4-round_robin-plan.md  phase-5-ladder_elimination-plan.md  phase-5a-ladder_refactor-plan.md  phase-5b-ladder_elimination-plan.md  phase-7-drowning_weights-plan.md  phase-8-series_multibracket-plan.md  phase-9-checkin_lifecycle-plan.md  service-consolidation-plan.md  tournament-conventions.md  tournament-core-plan.md
examples/: __init__.py  rock_paper_scissors.py  rps_example_league.json  rushrev.json  rushrev_example_league.json  test_discord.py  ww_example_league.json
logs/: cmd_0_launch_wrapper.sh
tests/: conftest.py  (+23 more)
(+32 files in other folders)
